--- a/minecraft/config/ProjectRed.cfg
+++ b/minecraft/config/ProjectRed.cfg
@@ -118,7 +118,7 @@ Compatibility {
     B:"Silver Ore"=true
     I:"Silver Ore resistance"=0
     B:"Silver Ore retrogen"=false
-    B:"Spreading Moss"=true
+    B:"Spreading Moss"=false
     B:"Tin Ore"=true
     I:"Tin Ore resistance"=0
     B:"Tin Ore retrogen"=false
