Disabled Illuminati pet item spawning #26 Disabled QuarryPlus spawner #27 Re-added the Matmos resource pack #25 Replaced Baubles with Baubles expanded, fixes #22 and #24 Updated Project Zulu, fixes #23 Tweaked JAS configs, #18 and #20 Nerfed agricraft config by removing resource crops #11 Disabled RR Pickaxe torch placing #7
Signed-off-by: eternie <hampez321@gmail.com>

--- a/minecraft/config/InventoryPets.cfg
+++ b/minecraft/config/InventoryPets.cfg
@@ -76,7 +76,7 @@
     B:"Disable Creeper Explosion"=false
     B:"Disable Enderman Auto Teleport to Safety"=false
     B:"Disable Holiday Pets"=false
-    B:"Disable Illuminati Give Random Items"=false
+    B:"Disable Illuminati Give Random Items"=true
     B:"Disable Mobs Spawn in Dungeons"=false
     B:"Disable Normal Nugget Recipes"=false
     B:"Disable Pets Give Items (Eggs, Pork Chops, String, Wool, Snowballs)"=false
