--- a/minecraft/config/JustAnotherSpawner/LoggingProperties.cfg
+++ b/minecraft/config/JustAnotherSpawner/LoggingProperties.cfg
@@ -1,25 +1,25 @@
 {
   "FILE_VERSION": "1.0",
   "SPAWNING": {
-    "isEnabled": true
+    "isEnabled": false
   },
   "DEBUG": {
     "isEnabled": false
   },
   "SETUP_SPAWNLISTENTRY": {
-    "isEnabled": true
+    "isEnabled": false
   },
   "SPAWNING_NAME": {
-    "isEnabled": true
+    "isEnabled": false
   },
   "SPAWNING_TYPE": {
-    "isEnabled": true
+    "isEnabled": false
   },
   "SPAWNING_POS": {
-    "isEnabled": true
+    "isEnabled": false
   },
   "SPAWNING_BIOME": {
-    "isEnabled": true
+    "isEnabled": false
   },
   "SPAWNING_NEARBY_BLOCKS": {
     "isEnabled": false
