--- a/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/EntityHandlers/ProjectZuluCore.cfg
+++ b/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/EntityHandlers/ProjectZuluCore.cfg
@@ -259,6 +259,12 @@
         "ProjectZulu|Core.Brown Bear"
       ]
     },
+    "ProjectZulu|Core.Zebra": {
+      "Type-Enabled": "CREATURE-true",
+      "Contents": [
+        "ProjectZulu|Core.Zebra"
+      ]
+    },
     "ProjectZulu|Core.Duck": {
       "Type-Enabled": "CREATURE-true",
       "Contents": [
