--- a/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/EntityHandlers/hbm.cfg
+++ b/minecraft/config/JustAnotherSpawner/WorldSettings/BASIC/DEFAULT/EntityHandlers/hbm.cfg
@@ -140,7 +140,7 @@
       ]
     },
     "hbm.entity_mob_volatile_creeper": {
-      "Type-Enabled": "MONSTER-true",
+      "Type-Enabled": "MONSTER-false",
       "Contents": [
         "hbm.entity_mob_volatile_creeper"
       ]
