--- a/minecraft/config/RouterReborn.cfg
+++ b/minecraft/config/RouterReborn.cfg
@@ -109,7 +109,7 @@ tools {
     B:PickaxeOverlay=true
 
     # Allow pickaxe to place torches
-    B:PickaxeTorches=true
+    B:PickaxeTorches=false
 
     # Allow Portable crafting table in game
     B:PortableCrafter=true
